--- a/WebApplication4/Views/Albums/Delete.cshtml
+++ b/WebApplication4/Views/Albums/Delete.cshtml
@@ -37,11 +37,12 @@
             @Html.DisplayFor(model => model.ReleaseDate)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Price)
+            @Html.DisplayNameFor(model => model.Rank)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Price)
+            @Html.DisplayFor(model => model.Rank)
         </dd>
+
     </dl>
     
     <form asp-action="Delete">
