--- a/WebApplication4/Views/Albums/Details.cshtml
+++ b/WebApplication4/Views/Albums/Details.cshtml
@@ -50,6 +50,13 @@
         <dd>
             @Html.DisplayFor(model => model.Price)
         </dd>
+        <!--column 6-->
+        <dt>
+            @Html.DisplayNameFor(model => model.Rank)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Rank)
+        </dd>
     </dl>
 </div>
 <div>
